<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="noMember">Not a member?</string>
    <string name="register">Register</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="done">Done</string>

</resources>
