<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="textVisiblePassword|textNoSuggestions" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:onClick="login"
        android:text="@string/login"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/notAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/noMember"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</ScrollView>